# FHV_DesktopWebApplications

./: .gitignore  CMakeLists.txt  CMakePresets.json  QS_README.md  README.md  conan_toolchain.cmake  conanfile.txt
assets/: app.html  package-lock.json  package.json  presets.html  tailwind.config.js  taskOverview.html
assets/css/: layout.css
assets/js/: CppAPI.js  Test.js  navigationHelper.js  presets.js  root.js  taskOverview.js  util.js
src/: DatabaseHelper.cpp  DatabaseHelper.h  Encdec.cpp  Encdec.h  MyApp.cpp  MyApp.h  Task.h  encdec.cpp  encdec.h  hello_test.cc  main.cpp  tests.cc
